# Image-inpainting-NN

./: .gitignore  Dockerfile  README.md  config.toml  config_deepfill.toml  config_test.toml  make_dataset.py  pyproject.toml  pyproject_past.toml
notebooks/: DeepFill.ipynb  GAN.ipynb  UNet_discriminator_loss.ipynb  VGG loss.ipynb  masking.ipynb  unet.ipynb
src/data/: image_dataset.py
src/ml/: DeepFill.py  Discriminator.py  PatchGAN.py  SimpleGenerator.py  UNet.py  VGGLoss.py
src/scripts/: test.py  train.py  train_deepfill.py  train_unet.py
src/utils/: image.py  losses.py  masking.py  notebook.py  tensor.py  weights.py
visualizations/: comparison.ipynb
